# GBcolorEmu

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  CPU.cpp  CPU.hpp  MemoryController.hpp  VideoController.hpp  arithInstructions.cpp  arithInstructions.hpp  flowInstructions.cpp  flowInstructions.hpp  instruction.hpp  lcdpalettes.cpp  lcdpalettes.hpp  ldInstructions.cpp  ldInstructions.hpp  main.cpp  memoryController.cpp  memoryController.hpp  miscInstructions.cpp  miscInstructions.hpp  registerBank.hpp  shiftInstructions.cpp  shiftInstructions.hpp  soundController.cpp  soundController.hpp  types.hpp  videoController.cpp  videoController.hpp
